# starter-code

./: .gitignore  LICENSE  README.md  alembic.ini  app.db  bootstrap.py  pyproject.toml
app/: app.py  db.py  dependencies.py  exceptions.py  routers.py  schemas.py  services.py
app/alembic/: env.py
app/alembic/versions/: 2dcfc2ce13cb_initial.py  add_assignment_table.py  c6cb385c78f2_create_initial_tables.py
