[project]
name = "starter-api"
version = "0.1.0"
description = "Starter API for code challenges"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.9",
]

[tool.ruff]
target-version = "py311"
line-length = 88
indent-width = 4
exclude = ["src/alembic/*",]

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]
ignore = ["E712"]
